# mcserver

./: README.md  pyproject.toml
src/mcserver/: __init__.py  paper.py  screen.py  util.py
src/mcserver/resources/: start-paper.sh.template
